adding turtle file

--- a/Python mini projects/password.ipynb
+++ b/Python mini projects/password.ipynb
@@ -2,29 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "your password is :   $Lbw}zoyK*2El83\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# generating random password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import random\n",
+    "lower_case = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "upper_case = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
+    "char = \"!@$#%&*}{-_\"\n",
     "num = \"0123456789\"\n",
-    "alph = \"abcdefghijklmnopqrstuvwxyz\"\n",
-    "capalp = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
-    "sp = \"@#$%&*}{_-\"\n",
-    "password = num+alph+capalp+sp\n",
-    "dig = 15\n",
-    "\n",
-    "pas = \"\".join(random.sample(password,dig))\n",
-    "print(\"your password is :  \",pas)\n"
+    "word = lower_case+upper_case+char+num\n",
+    "length = int(input())\n",
+    "password = \"\".join(random.sample(word,length))\n",
+    "print(\"your password is : \",password)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
