--- a/Python mini projects/password generator/password.ipynb
+++ b/Python mini projects/password generator/password.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your password is :  rU#MeXB6F0\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "lower_case = \"abcdefghijklmnopqrstuvwxyz\"\n",
